# wgpu-template

./: Cargo.toml  README.md
examples/buffer/: mod.rs  shader.wgsl
examples/depthBuffer/: camera.rs  mod.rs  shader.wgsl  texture.rs
examples/instance/: mod.rs
examples/model/: mod.rs  model.rs  resource.rs  texture.rs
examples/texture/: mod.rs  shader.wgsl  texture.rs
examples/triangle/: mod.rs  shader_press_space.wgsl
examples/uniform/: mod.rs  shader.wgsl
src/: lib.rs  main.rs
