[package]
name = "wgpu-template"
version = "0.1.0"
edition = "2021"

[[example]]
name = "triangle"
path = "examples/triangle/mod.rs"

[[example]]
name = "buffer"
path = "examples/buffer/mod.rs"

[[example]]
name = "texture"
path = "examples/texture/mod.rs"

[dependencies]
wgpu = "0.20.0"
winit = "0.30.0"
env_logger = "0.11"
log = "0.4"
pollster = "0.3"
bytemuck = { version = "1.15.0", features = [ "derive" ]}
image = "0.25.1"
anyhow = "1.0.83"